{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 15,
  "lineage": "19485bb6-be3f-8611-c808-fa17a00a4ebc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0262fa742fb354c61",
            "domain": "vpc",
            "id": "eipalloc-060b7d17a2d9fb0d5",
            "instance": "i-01277456e9cda0dc5",
            "network_interface": "eni-03d6b1eba00c65b1d",
            "private_dns": "ip-10-0-1-98.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-54-250-59-146.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.250.59.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc75a8978fbbc969",
            "arn": "arn:aws:ec2:ap-northeast-1:676635633609:instance/i-01277456e9cda0dc5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01277456e9cda0dc5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "example",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d6b1eba00c65b1d",
            "private_dns": "ip-10-0-1-98.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-54-65-15-123.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.65.15.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f855b62fd46e3447",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089d6680358fdee10",
            "tags": {
              "Name": "example"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0455dd29456c4d119"
            ]
          },
          "depends_on": [
            "aws_key_pair.example",
            "aws_security_group.example",
            "aws_subnet.example",
            "data.aws_ami.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:676635633609:internet-gateway/igw-072bff47b72c1c665",
            "id": "igw-072bff47b72c1c665",
            "owner_id": "676635633609",
            "tags": {
              "Name": "example"
            },
            "vpc_id": "vpc-092e6cdba6c0060c0"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-072bff47b72c1c665",
            "id": "r-rtb-08d34b5de10d603921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d34b5de10d60392",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.example",
            "aws_route_table.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08d34b5de10d60392",
            "owner_id": "676635633609",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example"
            },
            "vpc_id": "vpc-092e6cdba6c0060c0"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd1fe79caab499c1",
            "route_table_id": "rtb-08d34b5de10d60392",
            "subnet_id": "subnet-089d6680358fdee10"
          },
          "depends_on": [
            "aws_route_table.example",
            "aws_subnet.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:676635633609:security-group/sg-0455dd29456c4d119",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0455dd29456c4d119",
            "ingress": [],
            "name": "example",
            "name_prefix": "",
            "owner_id": "676635633609",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-092e6cdba6c0060c0"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "custom_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-3543012580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0455dd29456c4d119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1948907865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0455dd29456c4d119",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1418045729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0455dd29456c4d119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "out_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1380870599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0455dd29456c4d119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:676635633609:subnet/subnet-089d6680358fdee10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-089d6680358fdee10",
            "map_public_ip_on_launch": true,
            "owner_id": "676635633609",
            "tags": {
              "Name": "example"
            },
            "vpc_id": "vpc-092e6cdba6c0060c0"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:676635633609:vpc/vpc-092e6cdba6c0060c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0902ed83675b4698a",
            "default_route_table_id": "rtb-0624c2d10f8c90096",
            "default_security_group_id": "sg-083da120e2f166dde",
            "dhcp_options_id": "dopt-62705905",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092e6cdba6c0060c0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0624c2d10f8c90096",
            "owner_id": "676635633609",
            "tags": {
              "Name": "example"
            }
          }
        }
      ]
    }
  ]
}